# GameEngine

./: CMakeLists.txt
libs-header/glad/: glad.c
libs/glad/glad/: glad.c  glad.h
libs/ozz/: CMakeLists.txt
libs/ozz-animation/: CMakeLists.txt
libs/ozz/build-utils/cmake/: compiler_settings.cmake
libs/ozz/samples/: CMakeLists.txt
libs/ozz/samples/framework/: application.cc  application.h  profile.cc
libs/ozz/samples/framework/internal/: camera.cc  camera.h  renderer_impl.cc  renderer_impl.h  shader.cc  shooter.cc
src/: AnimationTask.cpp  AnimationTask.h  CMakeLists.txt  Components.cpp  Core.h  EntityComponents.h  ISystem.h  README.md  RenderDevice.cpp  RenderDevice.h  RenderPipeline.cpp  RenderPipeline.h  RenderWorld.cpp  RenderWorld.h  Renderer.cpp  Renderer.h  SimpleApp.cpp  Systems.cpp  Systems.h  animation_instance.cpp  animation_instance.h  application.cc  application.h  batch_animation_system.cpp  batch_animation_system.h  example_util.h  fbx_tools.cc  fbx_tools.h  gltf2Mesh.cpp  gltf_tools.cpp  gltf_tools.h  image.cc  main_test.cpp  mesh.cc  mesh.cpp  mesh.h  motion_utils.cc  profile.cc  render_material.cc  render_material.cpp  (+5 more)
src/GltfTools/: AssetSerializer.cpp  AssetSerializer.h  AssetTypes.h  GltfTools.cpp  GltfTools.h  GltfToolsAnimation.cpp  OzzSerializationHelper.h
src/internal/: camera.cc  camera.h  imgui_impl.cc  imgui_impl.h  immediate.cc  renderer_impl.cc  renderer_impl.h  shader.cc  shader.h  shooter.cc  shooter.h
src/tools/: CMakeLists.txt
